Fix delete button not showing under Plus

--- a/plugins/RDNPlus/css/rdnrefresh.css
+++ b/plugins/RDNPlus/css/rdnrefresh.css
@@ -97,6 +97,7 @@ background-color:white;
 
 .submit_delete {
 background-position: 0pt -658px;
+background-image: url(../../../theme/rdnshiny/images/icons/icons-01.gif);
 }
 
 .notice-options form.notice_delete {
